[package]
name = "printer-bindings"
version = "0.1.15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_bindgen = "=0.9.0-alpha"
linkme = "0.3.26"
printers = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[lib]
name = "printer_bindings"
crate-type = ["cdylib"]
path = "./src/lib.rs"
